<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/q7"
        android:text="@string/question7"
        android:textColor="@color/textColor"
        android:textSize="25sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/q7rg"
        android:paddingTop="5dp"
        >
        <RadioButton
            android:id="@+id/q7op1"
            android:text="@string/q7op1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingRight="5dp"
            android:layout_margin="1dp"
            android:textColor="@color/textColor"/>
        <RadioButton
            android:id="@+id/q7op2"
            android:text="@string/q7op2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingRight="5dp"
            android:layout_margin="1dp"
            android:textColor="@color/textColor"/>
        <RadioButton
            android:id="@+id/q7op3"
            android:text="@string/q7op3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingRight="5dp"
            android:layout_margin="1dp"
            android:textColor="@color/textColor"/>
        <RadioButton
            android:id="@+id/q7op4"
            android:text="@string/q7op4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingRight="5dp"
            android:layout_margin="1dp"
            android:textColor="@color/textColor"/>
    </RadioGroup>
</LinearLayout>