<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question3"
        android:id="@+id/q3"
        android:textSize="25sp"
        android:textColor="@color/textColor"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/q3"
        android:id="@+id/q3rg"
        android:padding="5dp"
        >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TableRow>
         <RadioButton
             android:textColor="@color/textColor"
             android:id="@+id/q3op1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="5dp"
             android:text="@string/q3op1"
             android:textSize="20sp"
             android:layout_margin="1dp"/>
         <RadioButton
             android:textColor="@color/textColor"
             android:id="@+id/q3op2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="5dp"
             android:text="@string/q3op2"
             android:textSize="20sp"
             android:layout_margin="1dp"/>

            <RadioButton
                android:id="@+id/q3op3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/q3op3"
                android:textColor="@color/textColor"
                android:textSize="20sp" />
        </TableRow>
        <TableRow>
        <RadioButton
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:id="@+id/q3op4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/q3op4"
            android:textSize="20sp"
            android:layout_margin="1dp"/>
        <RadioButton
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:id="@+id/q3op5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/q3op5"
            android:textSize="20sp"
            android:layout_margin="1dp"/>
        <RadioButton
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3op6"
            android:id="@+id/q3op6"
            android:padding="5dp"
            android:textSize="20sp"
            android:layout_margin="1dp"/>
        </TableRow>
        <TableRow>
        <RadioButton
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3op7"
            android:id="@+id/q3op7"
            android:padding="5dp"
            android:textSize="20sp"
            android:layout_margin="1dp"/>
        <RadioButton
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:id="@+id/q3op8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="20sp"
            android:text="@string/q3op8"
            android:layout_margin="1dp"/>
        <RadioButton
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3op9"
            android:id="@+id/q3op9"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_margin="1dp"/>
        </TableRow>

        <TableRow>
        <RadioButton
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Other"
            android:id="@+id/q3op10"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_margin="1dp"/>
        </TableRow>
        </TableLayout>
    </RadioGroup>

    <EditText
        android:id="@+id/q3ed1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/q3rg"
        android:hint="Others"
        android:paddingTop="5dp"
        android:selectAllOnFocus="true" />
</RelativeLayout>