<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        android:id="@+id/q2"
        android:textSize="25sp"
        android:textColor="@color/textColor"
        />

    <RadioGroup
        android:paddingTop="5dp"
        android:textColor="@color/textColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/q2"
        android:id="@+id/q2rg"
        >
        <RadioButton
            android:paddingRight="5dp"
            android:layout_margin="1dp"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2op1"
            android:id="@+id/q2op1" />
        <RadioButton
            android:paddingRight="5dp"
            android:layout_margin="1dp"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2op2"
            android:id="@+id/q2op2" />
        <RadioButton
            android:paddingRight="5dp"
            android:layout_margin="1dp"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2op3"
            android:id="@+id/q2op3"/>
        <RadioButton
            android:paddingRight="5dp"
            android:layout_margin="1dp"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2op4"
            android:id="@+id/q2op4" />
    </RadioGroup>
</RelativeLayout>