<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question6"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:id="@+id/q6"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/q6rg"
        android:paddingTop="7dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
            <RadioButton
                android:layout_weight="1"
                android:id="@+id/q6op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6op1"
                android:textSize="20sp"
                android:paddingRight="5dp"
                android:layout_margin="1dp"
                android:textColor="@color/textColor"/>
            <RadioButton
                android:layout_weight="1"
                android:id="@+id/q6op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6op2"
                android:textSize="20sp"
                android:paddingRight="5dp"
                android:layout_margin="1dp"
                android:textColor="@color/textColor"/>
            </TableRow>
            <TableRow>
            <RadioButton
                android:layout_weight="1"
                android:id="@+id/q6op3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6op3"
                android:textSize="20sp"
                android:paddingRight="5dp"
                android:layout_margin="1dp"
                android:textColor="@color/textColor"/>
            <RadioButton
                android:layout_weight="1"
                android:id="@+id/q6op4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6op4"
                android:textSize="20sp"
                android:paddingRight="5dp"
                android:layout_margin="1dp"
                android:textColor="@color/textColor"/>
            </TableRow>
            <TableRow>
            <RadioButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q6op5"
                android:text="Any Other"
                android:textSize="20sp"
                android:paddingRight="5dp"
                android:layout_margin="1dp"
                android:textColor="@color/textColor"/>
            </TableRow>
        </TableLayout>
    </RadioGroup>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/q6ed1"
        android:layout_below="@id/q6rg"
        android:padding="10dp"
        android:hint="Others"
        android:textSize="20sp"
        android:enabled="false"
        >
    </EditText>
</LinearLayout>